# PC-Voice-Assist

./: .codecov.yml  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  main.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
ci_cd_files_fixed/: .flake8  CHANGELOG.md  pyproject.toml
ci_cd_files_fixed/.github/workflows/: codeql.yml  dependency-review.yml
docs/: architecture.md  ci-cd.md  development.md  user_guide.md
examples/: advanced_demo.py  demo_without_voice.py  quick_start.py
src/: __init__.py  llm_client.py  logger.py  speech_recognition_module.py  task_executor.py  text_to_speech.py
src/controllers/: __init__.py  app_controller.py  file_controller.py  music_controller.py  system_controller.py  writing_controller.py
tests/: test_basic.py
